APIs for: Contacts, Prices, ETC

--- a/NutraBioticsBackend/Views/Shared/_Layout.cshtml
+++ b/NutraBioticsBackend/Views/Shared/_Layout.cshtml
@@ -25,6 +25,9 @@
                     <li>@Html.ActionLink("Acerca de", "About", "Home")</li>
                     <li>@Html.ActionLink("Contacto", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Usuarios", "Index", "Users")</li>
+                    <li>@Html.ActionLink("Contactos", "Index", "Contacts")</li>
+                    <li>@Html.ActionLink("Clientes", "Index", "Customers")</li>
+                    <li>@Html.ActionLink("Sucursales", "Index", "ShipToes")</li>
                 </ul>
             </div>
         </div>
